[package]
name = "calculate_wallet_value_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
csv = "1.1"
fast-float = "0.2.0"
serde_json = "1.0.89"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }